# smarttrafficgirls

./: .gitignore  README.md
src/: package.xml
src/smart_traffic/: package.xml  setup.cfg  setup.py
src/smart_traffic/smart_traffic/: csv_player_node.py  event_detector.py
src/smart_traffic_interfaces/: CMakeLists.txt  package.xml
src/smart_traffic_interfaces/msg/: VehicleStatus.msg
